cabal-version:      2.4
name:               scheduled-blocks
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Calculate the Epoch Nonce seeds and compare with the Pool sigma derived VRF key of the Pool to estimated the block assignments.

-- The license under which the package is released.
-- license: MIT <https://opensource.org/licenses/MIT>

author:             Quang Tran (Chop Tr)
maintainer:         chop@chop.ink

-- A copyright notice.
-- copyright: Quang Tran (chop@chop.ink)
-- category: cardano, blocks, pool operation
extra-source-files: CHANGELOG.md

common shared-properties
  default-language:   Haskell2010
  build-depends:
    , aeson                 ^>=2.0.1.0
    , aeson-pretty
    , async
    , base                  ^>=4.14.3.0
    , base16-bytestring
    , binary
    , bytestring
    , cryptonite
    , directory
    , format-numbers
    , http-conduit
    , memory
    , random
    , stm-chans
    , text
    , time
    , unordered-containers
    , utf8-string

  default-extensions: OverloadedStrings
  ghc-options:        -Wunused-imports

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules:
    Application.MyApp
    Domain.BlockchainGenesis
    Domain.BlockInfo
    Domain.CardanoGlobal
    Domain.EpochInfo
    Domain.EpochParameter
    Domain.ParseTool
    Domain.PoolHistory
    Domain.PoolInfo
    Domain.VrfSkey
    Infrastructure.Api
    Infrastructure.Cardano.Crypto.VRF.Praos
    Infrastructure.Crypto
    Infrastructure.KeyFile

  extra-libraries: sodium

executable scheduled-blocks
  import:         shared-properties
  main-is:        Main.hs
  build-depends:  scheduled-blocks
  hs-source-dirs: app

executable test
  import:         shared-properties
  main-is:        Main.hs
  build-depends:  scheduled-blocks
  hs-source-dirs: test
  build-depends:
    , tasty
    , tasty-hspec
