cabal-version:      2.4
name:               scheduled-blocks
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Calculate the Epoch Nonce seeds and compare with the Pool sigma derived VRF key of the Pool to estimated the block assignments.

-- The license under which the package is released.
-- license: MIT <https://opensource.org/licenses/MIT>

author:             Quang Tran (Chop Tr)
maintainer:         chop@chop.ink

-- A copyright notice.
-- copyright: Quang Tran (chop@chop.ink)
-- category: cardano, blocks, pool operation
extra-source-files: CHANGELOG.md

common shared-properties
  default-language:   Haskell2010
  build-depends:
    , aeson                  ^>=2.0.1.0
    , aeson-pretty
    , async
    , base                   ^>=4.14.3.0
    , base16-bytestring
    , binary
    , bytestring
    , cryptonite
    , directory
    , format-numbers
    , http-conduit
    , http-types
    , memory
    , optparse-applicative
    , random
    , terminal-progress-bar
    , text
    , time
    , timeit
    , unordered-containers
    , utf8-string

  default-extensions: OverloadedStrings
  ghc-options:        -Wunused-imports

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules:
    Application.CardanoHelpers
    Application.CommonHelpers
    Application.HistoryBlocks
    Application.NextBlocks
    Application.PersistReport
    Domain.ArmadaNonce
    Domain.BlockchainGenesis
    Domain.BlockInfo
    Domain.EpochInfo
    Domain.EpochParameter
    Domain.EpochSchedules
    Domain.ParseTool
    Domain.PoolHistory
    Domain.PoolInfo
    Domain.VrfSkey
    Repository.Api
    Repository.Cardano.Crypto.VRF.Praos
    Repository.Db
    Repository.KeyFile

  extra-libraries: sodium

executable scheduled-blocks
  import:         shared-properties
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  scheduled-blocks
  ghc-options:    -threaded -rtsopts

test-suite test
  import:             shared-properties
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  build-depends:      scheduled-blocks
  build-depends:      hspec
  other-modules:
    Application.CardanoHelpersSpec
    Application.PersistReportSpec
    LoadSample
    Repository.Cardano.Crypto.VRF.PraosSpec
    TestSample

  ghc-options:        -Wall
  build-tool-depends: hspec-discover:hspec-discover ==2.*
